privacy docs WIP

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -11,6 +11,9 @@ hx.finance is a decentralized exchange with a fair launch model. 33% of tokens a
 **Fast Trading**
 Benefit from Hyperliquid's high-performance blockchain infrastructure.
 
+**Private Trading** 🆕
+Trade anonymously with zero-knowledge proofs while maintaining regulatory compliance through our innovative Proof of Innocence system.
+
 **Points System**
 Earn points for trading and providing liquidity. Points convert to hx.finance tokens at launch.
 
@@ -25,6 +28,7 @@ Built specifically for the Hyperliquid ecosystem with optimized performance.
 - **[Make Your First Swap](/getting-started/first-swap)** - Start trading
 
 ### Advanced Features
+- **[Private Trading](/private-trading/overview)** - Trade with complete privacy 🆕
 - **[Become a Liquidity Provider](/liquidity/becoming-lp)** - Earn fees from trades
 - **[Understanding Points](/points-rewards/how-points-work)** - Learn about the rewards system
 - **[Explore the Ecosystem](/ecosystem/overview)** - Discover related projects
