--- a/pages/private-trading/how-to-trade-privately.mdx
+++ b/pages/private-trading/how-to-trade-privately.mdx
@@ -1,6 +1,6 @@
 # How to Trade Privately
 
-This guide walks you through the complete process of private trading on Moonswap, from initial setup to executing trades and withdrawing funds.
+This guide walks you through the complete process of private trading on hx.finance, from initial setup to executing trades and withdrawing funds.
 
 import { Callout, Steps } from 'nextra/components'
 
@@ -231,5 +231,5 @@ Your privacy extends across tokens:
 4. **QR Support**: For commitment backup
 
 <Callout type="success">
-  You're now ready to trade privately on Moonswap! Remember to always prioritize security and follow best practices for maximum privacy.
+  You're now ready to trade privately on hx.finance! Remember to always prioritize security and follow best practices for maximum privacy.
 </Callout>
