--- a/pages/private-trading/overview.mdx
+++ b/pages/private-trading/overview.mdx
@@ -1,10 +1,10 @@
 # Private Trading Overview
 
-Moonswap introduces **Hyperliquid Privacy System "Innocence"** - a groundbreaking privacy extension that enables private trading through zero-knowledge proofs while maintaining full regulatory compliance.
+hx.finance introduces **Hyperliquid Privacy System "Innocence"** - a groundbreaking privacy extension that enables private trading through zero-knowledge proofs while maintaining full regulatory compliance.
 
 ## What is Private Trading?
 
-Private trading on Moonswap allows you to:
+Private trading on hx.finance allows you to:
 - **Trade anonymously** without revealing your wallet address
 - **Maintain privacy** for your trading strategies and positions
 - **Comply with regulations** through our Proof of Innocence system
@@ -13,13 +13,13 @@ Private trading on Moonswap allows you to:
 import { Callout } from 'nextra/components'
 
 <Callout type="info">
-  Private trading is completely optional. You can continue using Moonswap normally without any privacy features.
+  Private trading is completely optional. You can continue using hx.finance normally without any privacy features.
 </Callout>
 
 ## Key Features
 
 ### 🛡️ Privacy with Compliance
-Unlike traditional mixers, Moonswap's private trading maintains regulatory compliance through our innovative Proof of Innocence mechanism.
+Unlike traditional mixers, hx.finance's private trading maintains regulatory compliance through our innovative Proof of Innocence mechanism.
 
 ### 🔐 Zero-Knowledge Technology
 Built on SP1 zero-knowledge circuits, ensuring mathematical proof of transaction validity without revealing details.
