--- a/pages/private-trading/proof-of-innocence.mdx
+++ b/pages/private-trading/proof-of-innocence.mdx
@@ -2,7 +2,7 @@
 
 ## What is Proof of Innocence?
 
-Proof of Innocence is Moonswap's innovative compliance mechanism that allows users to trade privately while ensuring they are not on any sanctions lists. It's a zero-knowledge proof that demonstrates you are **NOT** in a sanctions database without revealing your actual identity.
+Proof of Innocence is hx.finance's innovative compliance mechanism that allows users to trade privately while ensuring they are not on any sanctions lists. It's a zero-knowledge proof that demonstrates you are **NOT** in a sanctions database without revealing your actual identity.
 
 import { Callout } from 'nextra/components'
 
@@ -43,14 +43,14 @@ graph TD
 ### Prerequisites
 
 Before generating a proof, ensure:
-- Your wallet is connected to Moonswap
+- Your wallet is connected to hx.finance
 - You have a small amount of HYPE for gas fees
 - You're not using a VPN that might interfere with the process
 
 ### Step-by-Step Guide
 
 1. **Navigate to Private Trading**
-   - Click on the "Private Trading" section in the Moonswap interface
+   - Click on the "Private Trading" section in the hx.finance interface
    - Select "Generate Proof of Innocence"
 
 2. **Initiate Proof Generation**
@@ -147,4 +147,4 @@ A: Yes, but only the most recent proof is valid for a given address.
 A: Yes! The zero-knowledge proof mathematically guarantees that no information about your address is revealed.
 
 **Q: What if I'm incorrectly on a sanctions list?**
-A: This is extremely rare, but if it occurs, you'll need to resolve it with the relevant authorities. Moonswap cannot override sanctions listings.
+A: This is extremely rare, but if it occurs, you'll need to resolve it with the relevant authorities. hx.finance cannot override sanctions listings.
