--- a/pages/private-trading/overview.mdx
+++ b/pages/private-trading/overview.mdx
@@ -75,4 +75,10 @@ Ready to start trading privately? Check out our [step-by-step guide](/private-tr
 
 ## Technical Implementation
 
+The hx.finance privacy system uses a **modular architecture** that enables seamless circuit upgrades without disrupting users. This means:
+
+- Your privacy proofs remain valid even when we upgrade the underlying technology
+- No need to re-prove innocence or re-deposit funds after system updates
+- Multiple proof versions can coexist, ensuring backward compatibility
+
 For developers and technical users interested in the underlying technology, visit our [technical details](/private-trading/technical-details) section.
