--- a/pages/private-trading/overview.mdx
+++ b/pages/private-trading/overview.mdx
@@ -1,6 +1,6 @@
 # Private Trading Overview
 
-hx.finance introduces **Hyperliquid Privacy System "Innocence"** - a groundbreaking privacy extension that enables private trading through zero-knowledge proofs while maintaining full regulatory compliance.
+hx.finance offers **private trading** - a feature that uses zero-knowledge proofs to enable anonymous trading while maintaining regulatory compliance.
 
 ## What is Private Trading?
 
@@ -19,13 +19,13 @@ import { Callout } from 'nextra/components'
 ## Key Features
 
 ### 🛡️ Privacy with Compliance
-Unlike traditional mixers, hx.finance's private trading maintains regulatory compliance through our innovative Proof of Innocence mechanism.
+Unlike mixers, private trading on hx.finance maintains regulatory compliance through Proof of Innocence.
 
 ### 🔐 Zero-Knowledge Technology
-Built on SP1 zero-knowledge circuits, ensuring mathematical proof of transaction validity without revealing details.
+Uses SP1 zero-knowledge circuits to prove transaction validity without revealing details.
 
 ### 💱 Full AMM Integration
-Direct integration with Uniswap V3 pools means you get the same liquidity and pricing as regular trades.
+Direct integration with Uniswap V3 pools provides the same liquidity and pricing as regular trades.
 
 ### 🏦 Multiple Token Support
 Currently supports:
