--- a/pages/private-trading/proof-of-innocence.mdx
+++ b/pages/private-trading/proof-of-innocence.mdx
@@ -2,7 +2,7 @@
 
 ## What is Proof of Innocence?
 
-Proof of Innocence is hx.finance's innovative compliance mechanism that allows users to trade privately while ensuring they are not on any sanctions lists. It's a zero-knowledge proof that demonstrates you are **NOT** in a sanctions database without revealing your actual identity.
+Proof of Innocence is hx.finance's compliance mechanism that allows users to trade privately while ensuring they are not on any sanctions lists. It's a zero-knowledge proof that demonstrates you are **NOT** in a sanctions database without revealing your actual identity.
 
 import { Callout } from 'nextra/components'
 
