--- a/pages/private-trading/technical-details.mdx
+++ b/pages/private-trading/technical-details.mdx
@@ -1,6 +1,6 @@
 # Technical Details
 
-This section provides in-depth technical information about the Hyperliquid Privacy System "Innocence" implementation for developers and advanced users.
+This section provides in-depth technical information about the private trading implementation for developers and advanced users.
 
 import { Callout, Tabs } from 'nextra/components'
 
