privacy testnet wanring

--- a/pages/private-trading/how-to-trade-privately.mdx
+++ b/pages/private-trading/how-to-trade-privately.mdx
@@ -4,6 +4,10 @@ This guide walks you through the complete process of private trading on hx.finan
 
 import { Callout, Steps } from 'nextra/components'
 
+<Callout type="warning">
+  **Testnet Only**: Private trading is currently available only on testnet. Visit [testnet.hx.finance](https://testnet.hx.finance) to try out these features before they launch on mainnet.
+</Callout>
+
 <Callout type="info">
   Before starting, ensure you have completed the [Proof of Innocence](/private-trading/proof-of-innocence) process.
 </Callout>
