--- a/pages/private-trading/proof-of-innocence.mdx
+++ b/pages/private-trading/proof-of-innocence.mdx
@@ -6,6 +6,10 @@ Proof of Innocence is hx.finance's compliance mechanism that allows users to tra
 
 import { Callout } from 'nextra/components'
 
+<Callout type="warning">
+  **Testnet Only**: Private trading is currently available only on testnet. Visit [testnet.hx.finance](https://testnet.hx.finance) to try out these features before they launch on mainnet.
+</Callout>
+
 <Callout type="info">
   Think of it as a privacy-preserving background check that proves you're compliant without exposing who you are.
 </Callout>
