--- a/pages/private-trading/technical-details.mdx
+++ b/pages/private-trading/technical-details.mdx
@@ -4,6 +4,10 @@ This section provides in-depth technical information about the private trading i
 
 import { Callout, Tabs } from 'nextra/components'
 
+<Callout type="warning">
+  **Testnet Only**: Private trading is currently available only on testnet. Visit [testnet.hx.finance](https://testnet.hx.finance) to try out these features before they launch on mainnet.
+</Callout>
+
 ## Architecture Overview
 
 ### Modular Privacy System Architecture
