--- a/pages/private-trading/overview.mdx
+++ b/pages/private-trading/overview.mdx
@@ -2,6 +2,10 @@
 
 hx.finance offers **private trading** - a feature that uses zero-knowledge proofs to enable anonymous trading while maintaining regulatory compliance.
 
+<Callout type="warning">
+  **Testnet Only**: Private trading is currently available only on testnet. Visit [testnet.hx.finance](https://testnet.hx.finance) to try out these features before they launch on mainnet.
+</Callout>
+
 ## What is Private Trading?
 
 Private trading on hx.finance allows you to:
