--- a/pages/ecosystem/overview.mdx
+++ b/pages/ecosystem/overview.mdx
@@ -186,8 +186,8 @@ Everything we build prioritizes:
 
 ### Official Channels
 - **Website**: [app.hx.finance](https://app.hx.finance)
-- **Twitter**: [@hxfinance](https://twitter.com/hxfinance)
-- **Discord**: [discord.gg/hxfinance](https://discord.gg/hxfinance)
+- **Twitter**: [@hxfinance](https://x.com/hx_finance)
+- **Discord**: [discord.gg/hxfinance](https://discord.gg/hV54GbXm)
 - **Telegram**: [t.me/hxfinance](https://t.me/hxfinance)
 
 ### Ecosystem Sites
