--- a/pages/getting-started/connect-wallet.mdx
+++ b/pages/getting-started/connect-wallet.mdx
@@ -108,4 +108,4 @@ For mobile users:
 After connecting:
 - [Get HYPE for gas](/getting-started/get-hype)
 - [Make your first swap](/getting-started/first-swap)
-- [Join Discord](https://discord.gg/hxfinance)
+- [Join Discord](https://discord.gg/hV54GbXm)
