--- a/pages/getting-started/first-swap.mdx
+++ b/pages/getting-started/first-swap.mdx
@@ -120,4 +120,4 @@ Hyperliquid's efficient infrastructure keeps transaction costs minimal.
 After your first swap:
 - [Learn About Liquidity](/liquidity/becoming-lp) - Provide liquidity and earn fees
 - [Understand Points](/points-rewards/how-points-work) - Maximize your rewards
-- [Join Discord](https://discord.gg/hxfinance) - Connect with the community
+- [Join Discord](https://discord.gg/hV54GbXm) - Connect with the community
