--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -57,6 +57,6 @@ Built specifically for the Hyperliquid ecosystem with optimized performance.
 
 ## Community & Support
 
-- **[Discord](https://discord.gg/hxfinance)** - Community discussions
-- **[Twitter](https://twitter.com/hxfinance)** - Latest updates
+- **[Discord](https://discord.gg/hV54GbXm)** - Community discussions
+- **[Twitter](https://x.com/hx_finance)** - Latest updates
 - **[FAQ](/troubleshooting/faq)** - Common questions answered
