--- a/pages/technical/smart-contracts.mdx
+++ b/pages/technical/smart-contracts.mdx
@@ -222,4 +222,4 @@ All contracts are verified on Hyperliquid Explorer:
 - [GitHub Repository](https://github.com/hxfinance)
 - [Contract Documentation](https://docs.hx.finance)
 - [Uniswap V3 Docs](https://docs.uniswap.org/contracts/v3/overview)
-- [Developer Discord](https://discord.gg/hxfinance-dev)
+- [Developer Discord](https://discord.gg/hV54GbXm-dev)
