--- a/pages/token/fair-launch.mdx
+++ b/pages/token/fair-launch.mdx
@@ -256,8 +256,8 @@ A: Yes, but Sybil detection active
 ## Stay Updated
 
 Official channels only:
-- Twitter: [@hxfinance](https://twitter.com/hxfinance)
-- Discord: [discord.gg/hxfinance](https://discord.gg/hxfinance)
+- Twitter: [@hxfinance](https://x.com/hx_finance)
+- Discord: [discord.gg/hxfinance](https://discord.gg/hV54GbXm)
 - Telegram: [t.me/hxfinance](https://t.me/hxfinance)
 
 ## Start Earning Points
