--- a/pages/troubleshooting/faq.mdx
+++ b/pages/troubleshooting/faq.mdx
@@ -125,8 +125,8 @@ Two NFT collections are planned with utility features including governance parti
 ## Getting Help
 
 ### Where do I get support?
-- **Discord** is best for quick help: [discord.gg/hxfinance](https://discord.gg/hxfinance)
-- **Twitter** for updates: [@hxfinance](https://twitter.com/hxfinance)
+- **Discord** is best for quick help: [discord.gg/hxfinance](https://discord.gg/hV54GbXm)
+- **Twitter** for updates: [@hxfinance](https://x.com/hx_finance)
 - **Telegram** for chat: [t.me/hxfinance](https://t.me/hxfinance)
 
 ### Found a bug?
@@ -181,4 +181,4 @@ Report the incident in Discord to help protect others. Note that blockchain tran
 
 *Additional questions? Join our Discord community for assistance.*
 
-**[Discord](https://discord.gg/hxfinance)** | **[Twitter](https://twitter.com/hxfinance)** | **[Start Trading](https://app.hx.finance)**
+**[Discord](https://discord.gg/hV54GbXm)** | **[Twitter](https://x.com/hx_finance)** | **[Start Trading](https://app.hx.finance)**
