--- a/pages/ecosystem/overview.mdx
+++ b/pages/ecosystem/overview.mdx
@@ -128,31 +128,30 @@ We're building bridges with other Hyperliquid projects that share our values:
 - Cross-promotion
 - Technical collaboration
 
-## Development Roadmap
+## Development Roadmap (Subject to change)
 
-### Q1 2025
+### Q3 2025
 - hx.finance launch
 - Points system live
 - HyperMoon Android
 - Ecosystem partnerships
 
-### Q2 2025
+### Q4 2025
 - hx.finance token launch
 - innocence.is beta
 - NFT collections
 - HyperMoon iOS
 
-### Q3 2025
+### Q1 2026
 - Full privacy integration
 - Advanced trading features
 - Governance launch
 - Institutional tools
 
-### Q4 2025 & Beyond
-- Cross-chain expansion
+### Q2 2026 & Beyond
 - Advanced DeFi primitives
 - Mobile wallet
-- Additional features
+- New apps which will be discussed soon that build on the solid foundations mentioned here.
 
 ## Get Involved
 
