update contract addresses

--- a/pages/getting-started/connect-wallet.mdx
+++ b/pages/getting-started/connect-wallet.mdx
@@ -41,7 +41,7 @@ Network Name: Hyperliquid
 RPC URL: https://rpc.hyperliquid.xyz/evm
 Chain ID: 999
 Symbol: HYPE
-Explorer: https://explorer.hyperliquid.xyz
+Explorer: https://hyperevmscan.io
 ```
 
 ### Step 5: Approve Connection
