--- a/pages/technical/smart-contracts.mdx
+++ b/pages/technical/smart-contracts.mdx
@@ -100,7 +100,7 @@ await tx.wait();
 
 ### Subgraph Access
 
-**Endpoint**: `https://api.goldsky.com/api/public/project_cmay1j7dh90w601r2hjv26a5b/subgraphs/moonswap-v3/hyperevm/gn`
+**Endpoint**: `https://api.goldsky.com/api/public/project_cmay1j7dh90w601r2hjv26a5b/subgraphs/hx-time-weighted-points/v1.0.0/gn`
 
 #### Example Queries
 
